--- a/travel_recommendation.css
+++ b/travel_recommendation.css
@@ -120,3 +120,7 @@ form {
     margin-left: auto; /* Push the image to the right side of the container */
     display: block; /* Ensure the image is centered horizontally */
 }
+
+submittedMessage {
+    color: white;
+}
